<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

    <Button
            android:text="@string/new_game_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple"
            android:id="@+id/newGameButton"/>
    <TextView
            android:text="@string/players_num_label"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/playersNumberRadioGroup"
            app:layout_constraintTop_toBottomOf="@+id/newGameButton"
            android:id="@+id/playersNumText" android:textSize="30sp"/>
    <RadioGroup
            android:id="@+id/playersNumberRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playersNumText">
        <RadioButton
                android:text="@string/tree_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/playersNum3"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/four_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/playersNum4"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/five_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:id="@+id/playersNum5"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/six_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/playersNum6"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/eight_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:id="@+id/playersNum8"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/nine_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/playersNum9"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:layout_weight="1"/>
    </RadioGroup>
</LinearLayout>